<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterReminderText"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonPickDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chooseDate" />

    <Button
        android:id="@+id/buttonPickTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chooseTime" />

</LinearLayout>
